# SCT_ONTOLOGY

./: .gitignore  .mcp.json  .railwayignore  20260515_plan-doc.md  20260515_project-upgrade-report.md  AGENTS.md  CHANGELOG.md  HVDC_Ontology_Grounded_ChatGPT_App_UIUX_Spec_2026-05-10.docx  LAYOUT.md  README.md  SCT_ONTOLOGY_CARD_GOVERNANCE_PATCH_V2.md  SCT_ONTOLOGY_CARD_GOVERNANCE_SPEC_v2.md  SCT_ONTOLOGY_CARD_UPGRADE_SPEC_v1.0.md  SCT_ONTOLOGY_Invoice_Audit_Platform_SPEC-v0.2.1-PATCH-NOTE.md  SYSTEM_ARCHITECTURE.md  chatgpt-app-submission.json  claude-app-submission.json  package-lock.json  package.json  phase1-hvdc-code-first-evidence-control-tower-Spec.md  phase1-hvdc-code-first-evidence-control-tower-integrated-v1.10.md  phase1-hvdc-code-first-evidence-control-tower-v1.10.md  phase3-plan.md  phase3-spec.md  plan-2026-05-11-sct-ontology-mcp-operating-update.md  plan-2026-05-13-cloudflare-remote-mcp-migration.md  plan-2026-05-25-case-warehouse-event-ssot.md  plan.md  railway.json  retro_shpt_v3.md  sct_ontology_MCP_operating_update_v1.0.md  start-hvdc-mcp.cmd  stock-pred-005930.KS-1780011429471.md  stock-pred-005930.KS-1780016475174.json  stock-pred-005930.KS-1780050595090.md  tsconfig.json  vitest.config.ts  wrangler.toml
apps/worker-py/: README.md  pyproject.toml
apps/worker-py/app/: main.py  schemas.py
hvdc_openai_agent/: AGENTS.md  MANIFEST.json  Makefile  README.md  pyproject.toml
hvdc_openai_agent/.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
hvdc_openai_agent/data/: sample_shipments.json
hvdc_openai_agent/docs/: OFFICIAL_OPENAI_USAGE.md  REVIEW_PATCH_LOG.md  VALIDATION.md
hvdc_openai_agent/reports/: final_validation.txt  sample_bl_auh_002.csv  sample_bl_auh_002.json  sample_bl_auh_002.txt
hvdc_openai_agent/tests/: test_agent_app.py  test_core.py  test_reporting.py
(+3547 files in other folders)
